RESOURCES/definition/structural/apiGateway/gloo/RESOURCES/SPLIT/service-gateway.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app: gloo
        discovery.solo.io/function_discovery: disabled
        gloo: gateway
    name: gateway
    namespace: gloo-system
spec:
    ports:
        - name: https
          port: 443
          protocol: TCP
          targetPort: 8443
    selector:
        gloo: gateway
