RESOURCES/definition/structural/apiGateway/gloo/RESOURCES/SPLIT/gateway-gateway-proxy-ssl.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
    labels:
        app: gloo
    name: gateway-proxy-ssl
    namespace: gloo-system
spec:
    bindAddress: '::'
    bindPort: 8443
    httpGateway: {}
    proxyNames:
        - gateway-proxy
    ssl: true
    useProxyProto: false
