RESOURCES/definition/structural/apiGateway/gloo/RESOURCES/SPLIT/gateway-gateway-proxy.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
    labels:
        app: gloo
    name: gateway-proxy
    namespace: gloo-system
spec:
    bindAddress: '::'
    bindPort: 8080
    httpGateway: {}
    proxyNames:
        - gateway-proxy
    ssl: false
    useProxyProto: false
